# MicroservicesWithAWS_HotelCreatedEventHandler_Python

./: lambda_function.py  pyproject.toml
