[tool.poetry]
name = "microserviceswithaws-hotelcreatedeventhandler-python"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.78"
elasticsearch = "^8.10.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
flake8-pyproject = "^1.2.3"
black = "^23.10.1"
types-jwt = "^0.1.3"

[tool.flake8]
max-line-length = 89
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 89

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
no_implicit_optional = true
no_implicit_reexport = true
files= ["lambda_function.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
